--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "phone-number-validation-tr": "^0.1.0",
     "react": "18.0.0",
     "react-native": "0.69.0"
   },
